# rokid-openvoice-process-android-pro

./: Android.mk  CMakeLists.txt  README.md  arm.mk  arm64.mk  commit
Android/: Android.mk
device/amlogic/p230/: openvoice.mk
device/amlogic/xxxx/: sample.mk
device/xxxx/p230/: openvoice.mk  sample.mk
doc/: SDK快速集成指南.md
etc/: Android.mk  openvoice_profile.json  speech_profile.json
framework/base/: Android.mk
framework/base/services/: Android.mk
framework/base/services/core/: Android.mk
frameworks/base/: Android.mk
frameworks/native/services/openvoice/: Android.mk
frameworks/native/services/openvoice/include/: IVoiceService.h  VoiceCallback.h
frameworks/native/services/openvoice/src/: IVoiceService.cpp  VoiceService.cpp
frameworks/native/services/openvoice_process/: Android.mk
frameworks/native/services/openvoice_process/include/: EventTypes.h  IVoiceCallback.h  IVoiceService.h  VoiceCallback.h
frameworks/native/services/openvoice_process/proto/: openvoice_process.proto
frameworks/native/services/openvoice_process/src/: CallbackProxy.cpp  CallbackProxy.h  IVoiceService.cpp  VoiceService.cpp  VoiceService.h  audio_recorder.cpp  siren_control.cpp  siren_control.h  voice_config.h
frameworks/native/services/openvoice_process/test/: Android.mk  test.cpp
frameworks/native/services/src/: IVoiceService.cpp  VoiceService.cpp  audio_recorder.h  voice_config.h
frameworks/native/services/src/callback/: CallbackProxy.cpp  CallbackProxy.h
frameworks/native/services/tts/: Android.mk
frameworks/native/services/tts/include/: TtsCallback.h
frameworks/native/services/tts/src/: TtsService.cpp  TtsService.h  (+2 more)
hardware/include/mic/: mic_array.h
hardware/modules/mic_array/: Android.mk  mic_array.c
hardware/modules/mic_array/amlogic_s9xx/: build.mk  mic_array.c
hardware/modules/mic_array/qcom_msm89xx/: build.mk  mic_array.c
hardware/modules/mic_array/xxxx/: build.mk  mic_array.c
include/: .RuntimeService.h.swp  ASRTaker.h  IRKRuntimeService.h  IRuntimeService.h  IVoiceCallback.h  IVoiceService.h  RKRuntimeService.h  RuntimeService.h  SirenService.h  SpeechTaker.h  VoiceCallback.h  VoiceEngine.h  VoiceService.h  engine.h  voice.h  voice_engine.h
libs/: speech.grpc.pb.cc  speech.grpc.pb.h  speech.pb.cc  speech.pb.h
src/: ASRTaker.cpp  Engine.cpp  IRKRuntimeService.cpp  IRuntimeService.cpp  IVoiceService.cpp  RKRuntimeService.cpp  RuntimeService.cpp  SirenService.cpp  SpeechTaker.cpp  VoiceEngine.cpp  VoiceService.cpp  VoiceService.h  engine.h  main.cpp  runtime_main.cpp  voice.cpp  voice_engine.cpp
src/callback/: IVoiceCallback.cpp
test/: Android.mk  CMakeLists.txt  test.cpp
tools/runtime/: Android.mk  runtime
tts/: Android.mk
tts/include/: ITtsCallback.h  ITtsService.h
tts/src/: ITtsService.cpp  TtsOpus.cpp  TtsOpus.h  TtsPlayer.cpp  TtsPlayer.h  TtsService.cpp  TtsService.h
tts/src/callback/: ITtsCallback.cpp
tts/test/: test.cpp
(+20 files in other folders)
